--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,15 @@
 name: JamesOppiabot
 
 description: Handles user interactions with issues.
+branding:
+  color: purple
+  icon: activity
+
 inputs:
   repo-token: # Repository token.
-    description: "The repository token needed to create comments."
+    description: 'The repository token needed to create comments.'
     required: true
 
 runs:
-  using: "node12"
-  main: "dist/index.js"
+  using: 'node12'
+  main: 'dist/index.js'
