--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon",
     "lint": "standard",
     "start": "probot run ./index.js",
-    "test": "node ./spec/setup.js",
+    "test": "jasmine",
     "actions-build": "ncc build actions/main.js",
     "actions-build-test": "node ./spec/actionsBuild.js",
     "update-actions-build": "node actions/build.js"
