--- a/action.yml
+++ b/action.yml
@@ -7,9 +7,18 @@ branding:
 
 inputs:
   repo-token: # Repository token.
-    description: 'The repository token needed to create comments.'
+    description: "The repository token needed to create comments."
+    required: true
+  google-client-credentials:
+    description: "Credentials for accessing google apis."
+    required: true
+  google-auth-credentials:
+    description: "Authenticated credentials for accessing google apis."
+    required: true
+  cla-sheet-id:
+    description: "ID for the CLA spreadsheet."
     required: true
 
 runs:
-  using: 'node12'
-  main: 'dist/index.js'
+  using: "node12"
+  main: "dist/index.js"
