transition to use google api key

--- a/action.yml
+++ b/action.yml
@@ -9,11 +9,8 @@ inputs:
   repo-token: # Repository token.
     description: "The repository token needed to create comments."
     required: true
-  google-client-credentials:
-    description: "Credentials for accessing google apis."
-    required: true
-  google-auth-credentials:
-    description: "Authenticated credentials for accessing google apis."
+  google-api-key:
+    description: "API key to access google APIs."
     required: true
   cla-sheet-id:
     description: "ID for the CLA spreadsheet."
